# GHCPortfolio

./: .gitignore  pyproject.toml
ghcp/: manage.py
ghcp/chat/: models.py  serializers.py  urls.py  views.py
ghcp/chat/migrations/: 0001_initial.py  0002_rename_message_message_text_alter_message_is_readed.py
ghcp/core/: admin.py  models.py  serializers.py  urls.py  views.py
ghcp/core/migrations/: 0001_initial.py  0002_alter_bio_options_alter_skillcategory_options.py  0003_alter_bio_phone.py  0004_hardskill_softskillstory_softskill_delete_skill.py  0005_delete_skillcategory.py  0006_remove_softskill_icon_remove_softskill_level.py  0007_alter_softskill_stories.py  0008_alter_softskillstory_options.py  0009_link_bio_resume.py
ghcp/core/templates/core/: base.html
ghcp/ghcp/: asgi.py  settings.py  urls.py  wsgi.py
ghcp/projects/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
ghcp/projects/migrations/: 0001_initial.py  0002_project_created_at_project_demo_project_pet_and_more.py  0003_alter_project_demo.py  0004_project_image.py
ghcp/projects/templates/admin/projects/: change_form.html
